<resources>
    <string name="app_name">Empreinte H2o</string>
    <string name="action_settings">Settings</string>
    <string name="main_bt_1">Choix du questionnaire</string>
    <string name="main_bt_2">Enfant</string>
    <string name="title_activity_quest_alimentation">Quest_alimentation</string>
    <string name="Lancer_les_questionnaires">Lancer les questionnaires</string>
    <string name="title_activity_quest_textile">Quest_textile</string>
    <string name="title_activity_quest_eau_domicile">Quest_eau_domicile</string>
    <string name="title_activity_quest_equipement">Quest_equipement</string>
    <string name="title_activity_graphe">Graphe</string>
    <string name="bt_precedent">Précédent</string>
    <string name="bt_suivant">Suivant</string>
    <string name="graphe">Voici le Graphique</string>
    <string name="title_activity_choix_questionnaire">Choix_questionnaire</string>
    <string name="hello_world">Hello world!</string>
    <string name="alimentation">alimentation</string>
    <string name="eau_domicile">eau domicile</string>
    <string name="equipement">equipement</string>
    <string name="textile">textile</string>
    <string name="Choix_des_questionnaires">Choix des questionnaires</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="retour">Retour a l\'accueil</string>
    <string name="title_activity_conseils2">Conseils2</string>
    <string name="optionmenu1">Conseils2</string>
    <string name="conseils">Conseils</string>
    <string name="optionmenu_quit">Quitter</string>
    <string name="optionmenu_a_propos">A propos</string>
    <string name="retour2">retour au graphique</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="comb">Nb de fois</string>
    <string name="combmois">Nombre de mois</string>
    <string name="combjour">.Fois par jour</string>
    <string name="Aqcol2">Nombre de fois</string>
    <string name="Aq1">Faîtes-vous attention à la provenance et à la saison des produits achetés?</string>
    <string name="Aq2">Achetez-vous des produits labelisés AB?</string>
    <string name="Aq3">Combien de fois par semaine mangez-vous:</string>
    <string name="Aq3nom">Entrée</string>
    <string name="Aq3c1">Salade ou crudité</string>
    <string name="Aq3c2">Assiette charcuterie</string>
    <string name="Aq3c3">Oeufs mayonnaise</string>
    <string name="Aq3c4">Entrée chaude</string>
    <string name="Aq3c4exemp">Feuilleté, friand au fromage, quiche,…</string>
    <string name="Aq3c5">Soupe</string>
    <string name="Aq4nom">Plat</string>
    <string name="Aq4c1">Plat végétarien</string>
    <string name="Aq4c1exemp">Peut contenir des oeufs</string>
    <string name="Aq4c2">Plat avec un peu de poulet</string>
    <string name="Aq4c2exemp">Moins de 100 grammes de poulets.</string>
    <string name="Aq4c3">Classique avec poulet</string>
	<string name="Aq4c3exemp">Plat avec un morceau de poulet (>100gr).</string>
	<string name="Aq4c4">Plat avec du boeuf</string>
	<string name="Aq4c4exemp">Plat avec un morceau de boeuf (>100gr).</string>
	<string name="Aq4c5">Frites Hamburger</string>
	<string name="Aq4c6">Sandwich jambon-beurre</string>
	<string name="Aq4c7">Sandwich oeuf-crudité-mayonnaise</string>
	<string name="Aq4c8">Pizzat</string>
	<string name="Aq4c9">Plat avec des pâtes</string>
	<string name="Aq4c10">Pâtes bolognaise,Pâtes carbonara,…</string>
	<string name="Aq5nom">Dessert</string>
	<string name="Aq5c1">Yahourt</string>
	<string name="Aq5c2">Fromage pate molle</string>
	<string name="Aq5c2exemp">Camembert, roquefort…</string>
	<string name="Aq5c3">Fromage pate dure</string>
	<string name="Aq5c3exemp">Gruyère, emmental…</string>
	<string name="Aq6nom">Petit Déjeuner</string>
	<string name="Aq6c1">Tartines et bol de lait</string>
	<string name="Aq6c1exemp">2 tartines beurrées</string>
	<string name="Aq6c2">Céréales riz</string>
	<string name="Aq6c2exemp">Rice krisppies</string>
	<string name="Aq6c3">Céréales maïs</string>
	<string name="Aq6c3exemp">Corn Flakes</string>
	<string name="Aq7nom">Eau</string>
	<string name="Aq7c1">Eau minérale en bouteille (50cL) par jour</string>
	<string name="Aq7c2">Eau du robinet (verres 25cl) par jour</string>
    <string name="tq1">Faîtes-vous attention à acheter du coton biologique? </string>
    <string name="tq2">Achetez vous des produits à base de matériaux recyclés? </string>
	<string name="tq3">En rêgle générale, que faites-vous de vos vêtements quand vous ne les mettez plus?</string>
	<string name="tq4col1">Garde robe</string>
	<string name="tq4col2">Dans ton armoire, combien as-tu de…</string>
	<string name="tq4col3">En moyenne, combien de temps gardes-tu cet articles?</string>
	<string name="tq4c1">Tshirt</string>
	<string name="tq4c2">Chemise</string>
	<string name="tq4c3">Haut</string>
	<string name="tq4c3exp">Pull, sweat, polaire…</string>
	<string name="tq4c4">Pour sortir</string>
	<string name="tq4c4exp">Veste, parka, manteau…</string>
	<string name="tq4c5">Bas</string>
	<string name="tq4c5exp">Jean, pantalon…</string>
	<string name="tq4c6">Jupe</string>
	<string name="tq4c7">Chaussure</string>
	<string name="tq4c7exp">Basket, cuir, toile…</string>
	<string name="edq1">Type de chauffe-eau?</string>
	<string name="edq1r1">Electricité</string>
	<string name="edq1r2">Gaz naturel</string>
	<string name="edq1r3">Panneau solaire</string>
	<string name="edq2">Robinet</string>
	<string name="edqutil">Utilisation</string>
	<string name="Fre">Fréquence</string>
	<string name="edq2c1">Lavabo rempli</string>
	<string name="edq2c2">Lavabo robinet ouvert</string>
	<string name="temp">Temps passé(min)</string>
	<string name="minute">minute(s)</string>
	<string name="edq3">Douche</string>
	<string name="edq4">Bain</string>
	<string name="edq5">WC</string>
	<string name="edq6">Consommables</string>
	<string name="eddent">Brossage de dents</string>
	<string name="edq7">Loisirs</string>
	<string name="edq7c1">Piscine</string>
	<string name="edq7c2">Lavage voiture</string>
	<string name="edq8">Lessive</string>
	<string name="edq8c1">Nombre de personne dans la famille</string>
	<string name="edq8c2">Lave linge</string>
	<string name="edq8c3">Lessive</string>
	<string name="edq8c4">Fait-tu attention aux dossages prescrit sur le bidon de lessive?</string>
	<string name="edq9">Vaisselle</string>
	<string name="edq9c1">Mode de nettoyage</string>
	<string name="edpchasse">Petite chasse</string>
	<string name="edgchasse">Grosse chasse</string>
	<string name="eqcol1">Multimédia</string>
	<string name="eqcol2">Possédez vous ce type d\'appareil?</string>
	<string name="eqcol3">Temps d\'utilisation moyen les jours de semaine (heure/jour)</string>
	<string name="eqcol4">Temps d\'utilisation moyen le week-end (heure/jour)</string>
	<string name="eqcol5">Taux de renouvellement</string>
	<string name="eqcol6">Laissez vous vos appareils en mode veille?</string>
	<string name="eqtel">Télévision</string>
	<string name="eqord">Ordinateur</string>
	<string name="eqport">Portable</string>
	<string name="eqcat">Cathodique</string>
	<string name="eqlcd">LCD</string>
	<string name="h">Heure</string>
	<string name="a">Année</string>
	<string-array name="textile_array">
	
	<item name="tq3r2">Le donne à quelqu\'un (ou association)</item>    
	<item name="tq3r1">Le jette à la poubelle</item>
	<item name="tq3r3">Je conserve tout</item>
	</string-array>
	<string-array name="eau_robi1_array">
	    	
	<item name="sp_eau_rob1a">Avec limiteur de débit</item>    
	<item name="sp_eau_rob1b">Sans limiteur de débit</item>
	</string-array>
	<string-array name="eau_robi2_array">	
	    
	<item name="sp_eau_rob2a">Chasse d\'eau normal</item>    
	<item name="sp_eau_rob2b">Bouteille d\'eau(1,5L)</item>
	<item name="sp_eau_rob2c">Chasse d\'eau dual</item>
	</string-array>
	<string-array name="eau_robi3_array">	
	    
	<item name="sp_eau_rob3a">Papier WC vierge</item>    
	<item name="sp_eau_rob3b">Papier WC recycler</item>
	</string-array>
	<string-array name="eau_robi4_array">	
	    
	<item name="sp_eau_rob2a">Oui</item>    
	<item name="sp_eau_rob2b">Non</item>
	</string-array>
	<string-array name="eau_robi5_array">	
	    
	<item name="sp_eau_rob2a">A la main</item>    
	<item name="sp_eau_rob2b">Rouleau</item>
	<item name="sp_eau_rob2c">Haute pression</item>
	</string-array>
	<string-array name="eau_robi6_array">	
	    
	<item name="sp_eau_rob2a">Lave linge-classeD</item>    
	<item name="sp_eau_rob2b">Lave linge-classeA</item>
	<item name="sp_eau_rob2c">Lave linge-classeA+++</item>
	</string-array>
	<string-array name="eau_robi7_array">	
	    
	<item name="sp_eau_rob2a">Lessive standart</item>    
	<item name="sp_eau_rob2b">Lessive ecolabel</item>
	<item name="sp_eau_rob2c">WashBall</item>
	</string-array>
	<string-array name="eau_robi8_array">	
	    
	<item name="sp_eau_rob2a">A la main,bac remplis</item>    
	<item name="sp_eau_rob2b">A la main,eau courante</item>
	</string-array>
	<string-array name="eau_robi9_array">	
	    
	<item name="sp_eau_rob2a">Lave vaisselle-classeD</item>    
	<item name="sp_eau_rob2b">Lave vaisselle-classeA</item>
	<item name="sp_eau_rob2c">Lave vaisselle-classeA+++</item>
	</string-array>
	<string-array name="oui_non">
		<item name="oui">Oui</item>
		<item name="non">Non</item>
	</string-array>
	<string-array name="textile_array2">
	   <item name="tq4r1">mois</item> 
	    <item name="tq4r2">an</item> 
	</string-array>
	<string-array name="textil1_array">
	    	
	<item name="sp_eau_rob1a">Le donne à</item>    
	<item name="sp_eau_rob1b">Le jette à</item>
	<item name="sp_eau_rob1c">Je conserve</item>
	</string-array>
	<string-array name="textil2_array">	
	    
	<item name="sp_eau_rob2a">quelqu\'un (ou association)</item>    
	<item name="sp_eau_rob2b">poubelle</item>
	<item name="sp_eau_rob2c">tout</item>
	</string-array>
</resources>