<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Close_all_Activity" 
    android:background="@drawable/bgfiche" 
    >

    <Button
        android:id="@+id/change_to_alimentation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/alimentation" />

    <Button
        android:id="@+id/change_to_eau_domicile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/change_to_alimentation"
        android:layout_below="@+id/change_to_alimentation"
        android:layout_marginTop="28dp"
        android:text="@string/eau_domicile" />

    <Button
        android:id="@+id/change_to_equipement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/change_to_eau_domicile"
        android:layout_below="@+id/change_to_eau_domicile"
        android:layout_marginTop="34dp"
        android:text="@string/equipement" />

    <Button
        android:id="@+id/change_to_textile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_to_equipement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/textile" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/Choix_des_questionnaires" 
        android:textSize="25sp"
        />
    	

</RelativeLayout>