<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Quest_alimentation" >
   
    <LinearLayout  
   	 	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.68"
            android:orientation="horizontal" >

       <Button
            android:id="@+id/btalim"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/bouffe" />
        
        <Button
            android:id="@+id/bttext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/vet" />

        <Button
            android:id="@+id/bteau"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/eau" />

        <Button
            android:id="@+id/btequip"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/multi" />
        <Button
            android:id="@+id/btgraph"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/graphe" />
    </LinearLayout>

        <TextView
            android:id="@+id/quest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:textStyle="bold"
            android:text="@string/Aq1"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="28dp">

            <CheckBox
                android:id="@+id/cb_choix1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:text="@string/oui"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_choix2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/quest2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Aq2"
            android:textStyle="bold"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="28dp" >

            <CheckBox
                android:id="@+id/cb_q2choix1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="@string/oui"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_q2choix2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/non"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/quest3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.18"
            android:text="@string/Aq3"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="14sp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/part1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Questalimlist1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"            
            android:layout_marginRight="20dp"
            android:text="@string/Aq3nom"
            android:textSize="20sp" />

        
         <TextView
             android:id="@+id/Questalimlist2"
             android:layout_width="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
             android:text="@string/Aqcol2"
             android:textSize="18sp" />
         
         <LinearLayout
        android:id="@+id/part1_q1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
            
         <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"            
            android:layout_marginRight="20dp"
            android:text="@string/Aq3nom"
            android:textSize="20sp" />

        
         <TextView
             android:id="@+id/question2"
             android:layout_width="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
             android:text="@string/Aqcol2"
             android:textSize="18sp" /> 
             
         </LinearLayout>

        </LinearLayout> 
        
        <LinearLayout
        android:id="@+id/part2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"            
            android:layout_marginRight="20dp"
            android:text="@string/Aq4nom"
            android:textSize="20sp" />

        
         <TextView
             android:id="@+id/textl2_1"
             android:layout_width="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
             android:text="@string/Aqcol2"
             android:textSize="18sp" />

        </LinearLayout>
        
        <LinearLayout
        android:id="@+id/part3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"            
            android:layout_marginRight="20dp"
            android:text="@string/Aq5nom"
            android:textSize="20sp" />

        
         <TextView
             android:id="@+id/textl3_2"
             android:layout_width="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
             android:text="@string/Aqcol2"
             android:textSize="18sp" />

        </LinearLayout>

       <LinearLayout
        android:id="@+id/part4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:text="@string/Aq6nom"
            android:textSize="20sp" />

         <TextView
             android:id="@+id/textl4_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp" />

        </LinearLayout>
        
      <LinearLayout
        android:id="@+id/part5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"            
            android:layout_marginRight="20dp"
            android:text="@string/Aq7nom"
            android:textSize="20sp" />

        
         <TextView
             android:id="@+id/textl5_2"
             android:layout_width="wrap_content"
             android:layout_marginLeft="100dp"
             android:layout_height="wrap_content"
             android:text="@string/Aqcol2"
             android:textSize="18sp" />

        </LinearLayout>
        
    <LinearLayout
        android:id="@+id/linearLayout5"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/alim_precedent_bt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:background="#99CCCC"
            android:text="@string/bt_precedent" />

        <Button
            android:id="@+id/alim_suivant_bt"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:background="#99CCCC"
            android:text="@string/bt_suivant" />
    </LinearLayout>
        
    </LinearLayout>

</ScrollView>