<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/o"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" >

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:text="@string/Aq3nom" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aqcol2"
            android:textSize="14sp" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TV_q1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:text="@string/Aq3c1"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_rep_q1"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:hint="@string/Aqcol2" />

    </LinearLayout>

</RelativeLayout>